# wildberries-stocks-and-prices-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: cli.py  dependencies.py  exceptions.py  main.py  parser.py  parsers.py  templates.py  validators.py
src/core/: exceptions.py  helpers.py  parser.py  shortcuts.py  templates.py  validators.py
src/core/enums/: quantity_status.py
src/core/helpers/: chunks.py  http.py  parsers.py
src/core/models/: __init__.py  category_prices.py  http_clients.py  nomenclature_prices.py  nomenclature_sizes.py  nomenclatures.py  parsers.py  stocks_by_sku.py  templates.py  warehouse_stocks.py  warehouse_stocks_rows.py  warehouses.py  wildberries_api.py
src/core/parsers/: __init__.py  prices.py  warehouses.py
src/core/services/: connection.py  http_clients.py  nomenclatures.py  wildberries_api.py  (+1 more)
src/database/: base.py  engine.py  queries.py  session_factory.py
src/enums/: __init__.py  quantity_status.py
src/helpers/: __init__.py  http.py  parsers.py
src/models/: __init__.py  category_prices.py  credentials.py  nomenclature_prices.py  nomenclature_sizes.py  nomenclatures.py  stocks.py  warehouse_stocks.py
src/services/: api_keys.py  connection.py  http_clients.py  nomenclatures.py  wildberries_api.py  workbook.py
src/ui/: controller.py  view.py
tests/: conftest.py
tests/fixtures/: workbooks.py
tests/test_parsers/: test_api_keys_worksheet_parser.py  test_stocks_worksheet_parser.py
tests/workbooks/: api-keys-worksheet-with-invalid-rows.xlsx  only-valid-api-keys-worksheet.xlsx  only-valid-stocks-worksheet.xlsx  stocks-worksheet-with-invalid-rows.xlsx
(+24 files in other folders)
