[tool.poetry]
name = "wildberries-manager"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "wildberries_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
openpyxl = "^3.1.1"
pysimplegui = "^4.60.4"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-httpx = "^0.21.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
