[tool.poetry]
name = "wildberries-manager"
version = "0.1.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "wildberries_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"
openpyxl = "^3.1.1"
httpx = "^0.23.3"
rich = "^13.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-httpx = "^0.21.3"
pytest-cov = "^4.0.0"
py2app = "^0.28.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
